--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -45,6 +45,8 @@ MAF_British_Settlers:0 "영국계 정착민"
 MAF_British_Settlers_desc:0 "우리 영토 내의 영국계 정착민들은 그들의 사회적 계급에 비해 많은 비중의 대전기 고참병의 비율 덕에 대전기 이전의 영향력을 대부분 보존하고 있다. 현재 그들의 영향력이 조국에 부정적 영향을 끼치고 있으므로, 우리는 근시일 내에 이들을 다뤄야 한다."
 MAF_Belgian_Investors:0 "플랑드르-왈로니아의 투자자들"
 MAF_Belgian_Investors_desc:0 "우리 영토 내의 벨기에 투자자들은 대전 이전의 높은 비율의 벨기에 연관 사업과 산업시설 덕에 대전기 이전의 영향력을 대부분 보존하고 있다. 현재 그들의 영향력이 조국에 부정적 영향을 끼치고 있으므로, 우리는 근시일 내에 이들을 다뤄야 한다."
+MAF_border_shit_show:0 "Border Raids"
+MAF_border_shit_show_desc:0 "There are ongoing bandit raids along our border, we are sure the Portuguese government is behind them. They will continue to be a thorn in out side until we bring a stop to them."
 
 ### Parties ###
 MAF_totalist_party:0 "아프리카 적위군"
@@ -88,10 +90,15 @@ MAF_SovState:0 "§R이 계획은 가볍게 진행해서는 안된다.§!"
 MAF_EndProc:0 "§R이를 시행한다면 심각한 반란에 직면할 것이다. 조심하라!.§!"
 MAF_Autonomy:0 "이는 중앙아프리카를 명목상의 괴뢰국으로 만들 것이며, 우리에게 더욱 큰 자치권을 줄 것이다"
 MAF_collapse_tooltip:0 "§R중앙아프리카는 수십 개의 새로운 국가로 붕괴되고 파괴 될 것입니다.§!\n"
+MAF_collapse:0 "Mittelafrika has collapsed."
 kenyatta_solf_affair_bad:0 "§R중앙아프리카는 법정 판결이 통과되면 크게 고통을 겪습니다 ...§!\n"
-germany_does_not_care:0 "§R독일은 우리의 어려움을 거의 신경 쓰지 않고, 우리를 무시할뿐만 아니라 우리가 이 문제를 완전히 포기하도록 강요합니다 ...§!\n"
+maybe_dont_ignore_germany_MAF:0 "§RIgnoring the words of the Kaiser is a dangerous game...§!\n"
 MAF_revolt_warning:0 "§R거의 모든 대륙이 공개적인 반란에 빠지려하고 있습니다.§!\n"
 MAF_BM_Improvement_Tooltip:0 "§G회계 연도 초에 예산을 선택할 수 있습니다.§!\n"
+MAF_CAN_Vol_tooltip:0 "§GThree divisions of Canadian troops will joins us.§!"
+african_divisions_1:0 "§GThree crack infantry divisions will join us from Mittelafrika.§!\n"
+african_divisions_2:0 "§GTwo crack cavalry divisions will join us from Mittelafrika.§!\n"
+african_divisions_3:0 "§GTwo crack motorised divisions will join us from Mittelafrika.§!\n"
 
 ### Opinion Modifies ###
 MAF_Refused_Explain:0 "포르투칼이 반군을 막는것을 거부하다"
@@ -330,8 +337,7 @@ mittel.2.a:0 "계획을 해 보자..."
 mittel.3.t:0 "우리의 정당한 영토에서 벌어질 악재의 기회"
 mittel.3.d:0 "모잠비크에 있는 수용소에 분산 거주하는 분노한 토착민들을 무장시킴으로써 중앙아프리카 내에 불안정성을 유도할 좋은 기회가 있다. 중앙아프리카가 불안정할수록, 우리의 분홍 지도에 보이는 정당한 우리의 영토를 되찾을 기회가 증가할 것이다."
 mittel.3.a:0 "그들을 최대한 무장시켜라"
-mittel.3.b:0 "그들을 총과 탄약으로 무장시키지만, 다른 것들은 제공하지 않는다"
-mittel.3.c:0 "이 폭도들을 해산하라"
+mittel.3.b:0 "이 폭도들을 해산하라"
 mittel.4.t:0 "경찰관이 총에 맞다!"
 mittel.4.d:0 "한 마콘데 부족인이 루사카의 우리 경찰관 중 한명을 총으로 쏘았다! 도시는 아직도 충격 속에 빠져있으며, 사주자와, 무기를 넘겨준 조력자들 또한 지역 경찰에 의해 조사를 위해 구금되어 있다. 그가 포르투갈의 식민지 국경을 넘어 전달된 무기를 획득했다는 이론이 제시되었다."
 mittel.4.a:0 "끔찍하다!"
@@ -350,25 +356,42 @@ mittel.8.a:0 "포르투갈은 이를 끝내야 한다!"
 mittel.9.t:0 "포르투갈은 이를 멈추어야 한다!"
 mittel.9.d:0 "우리는 포르투갈에 정식으로 항의를 보내야 한다. 이 지속적인 ‘강도’ 기지의 존재는 우리 식민지에 위협임이 뚜렷하다. 그들이 소수의 강도를 처리할 수 없다면, 그들은 식민 지배를 할 그릇이 되지 못할 것 이다."
 mittel.9.a:0 "포르투갈 영사를 소환하라! 우린 스스로 이를 처리할 것이다!"
-mittel.9.b:0 "어쩌면 사태의 심각화가 우리의 이익이 될 지도..."
-mittel.9.c:0 "우리는 이 사건들 모두 베를린에 가져가야 한다!"
+mittel.9.b:0 "우리는 이 사건들 모두 베를린에 가져가야 한다!"
 mittel.10.t:0 "아프리카에서의 문제"
 mittel.10.d:0 "중앙아프리카 총독이 우리에게 온 뒤 지원을 요청하면서, 그는 포르투갈의 지원을 받는 강도단이 독일인과 아프리카인 경찰관을 죽이고 우리의 아프리카의 지배에 위험을 끼친다고 발언하였다. 어떻게 대처할 것인가?"
-mittel.10.a:0 "포르투갈과의 관계는 중요하므로, 도움을 거절한다"
+mittel.10.a:0 "포르투갈과의 관계는 중요하다, 그들에게 물러서라고 전해라"
 mittel.10.b:0 "포르투갈과 함께 이 문제를 해결할 것이다"
 mittel.11.t:0 "카이저께서 거절하시다"
-mittel.11.d:0 "카이저께서는 강도단들은 우리 스스로 처리하도록 하고, 독일과 포르투갈 간의 관계를 망치지 말라 하시며 도움을 거절하셨다. 우리는 베를린으로부터 어떤 도움도 기대할 수 없다."
-mittel.11.a:0 "젠장!"
+mittel.11.d:0 "카이저께서는 물러서고, 독일과 포르투갈 간의 관계를 망치지 말라 하시며 도움을 거절하셨다. 우리는 베를린으로부터 어떤 도움도 기대할 수 없다."
+mittel.11.a:0 "We have no choice but to follow the Kaiser's instructions."
+mittel.11.b:0 "Ignore him! We will deal with this on our own..."
+mittel.1101.t:0 "Mittelafrika Ignored Us"
+mittel.1101.d:0 "Our Mittelafrikan Statthalter had the nerve to ignore our instructions and has taken up the issue with the Portuguese Consul directly. This is nothing short of an outrage, treason, mutiny!"
+mittel.1101.a:0 "Cut their supplies, they can't be allowed to get away with this!"
+mittel.1102.t:0 "The Kaiser Retaliates"
+mittel.1102.d:0 "The Kaiser has dropped our supply shipments and denounced our actions. We will certainty feel the pinch over the next few months."
+mittel.1102.a:0 "Maybe this wasn't such a good idea..."
 mittel.12.t:0 "독일인들이 방문하다"
 mittel.12.d:0 "다르 에스 살람의 독일인들이 베를린의 대군주께서 오시고, 그들의 영토에서 우리 지원을 받는 반군들에 대해 이야기를 나누었다고 하였으며, 이제 베를린은 우리에게 우리의 행동에 대한 설명을 요구하고 있다…"
 mittel.12.a:0 "상황을 설명한다"
 mittel.12.b:0 "우리는 외국과 국내 문제를 이야기하지 않는다"
+mittel.1201.t:0 "Portugal Denied Our Request"
+mittel.1201.d:0 "The Portuguese government refused to 'discuss internal affairs with foreign nations', this is not on at all and we have send them a strongly worded letter reminded them of their duties to us."
+mittel.1201.a:0 "An outrage!"
+mittel.1201.b:0 "Unacceptable! Tell Mittelafrika they can deal with it!"
+mittel.1202.t:0 "An Offer From Germany"
+mittel.1202.d:0 "The Portuguese government has refused to 'discuss internal affairs' Germany and in retaliation the Kaiser has given us the green light to deal with this issue as we see fit."
+mittel.1202.a:0 "Best to leave it."
+mittel.1202.b:0 "A green light you say? Now is the time!"
 mittel.13.t:0 "포르투갈이 상황을 설명하다"
 mittel.13.d:0 "포르투갈 외교관이 루뭄바 지역에서의 혼란스러운 상황을 자세한 정보와 함께 설명하였다..."
-mittel.13.a:0 "아프리카가 그리 복잡한 줄 누가 알았겠는가!"
+mittel.13.a:0 "아프리카가 그리 복잡한 줄 누가 알았겠는가, 상관 없다 그들이 즉시 물러서도록 요구하라!"
 mittel.14.t:0 "외교 공관이 문제 해결을 선언하다"
-mittel.14.d:0 "포르투갈인들은 결백함을 증명해냈고, 강도와의 전쟁은 현재 잦아들었지만, 베를린이 뭐라 말하든, 전쟁은 끝나기에 멀었다."
-mittel.14.a:0 "아직 더 남았을 것이다..."
+mittel.14.d:0 "The Portuguese have been forced to step down by the Berlin government, looks like it was the right call to talk to them."
+mittel.14.a:0 "Thank you Kaiser!"
+mittel.1401.t:0 "We Must Step Down"
+mittel.1401.d:0 "Having engaged with the German government about the issue, we have no choice but to follow their request and stand down with our attacks."
+mittel.1401.a:0 "We will not forget this."
 mittel.15.t:0 "중앙아시아가 우리의 식민지를 위협하다"
 mittel.15.d:0 "다르 에스 살람의 독일인들이 그들 영토 내의 반군에 대한 우리의 지원을 인지하고, 이제 그들은 우리에게 반군들을 해산시키기를 요구하면서 그러지 않을 경우 ‘결과를 맞이할 것’이라 하였다. 어떻게 대처해야 하는가?"
 mittel.15.a:0 "훌륭하군, 아마도 1918년의 복수를 할 수 있을 것이다!"
@@ -593,10 +616,10 @@ mittel.80.a:0 "A good time was had by all."
 mittel.81.t:0 "Die Neue Völkerschau Arrives in Shangai"
 mittel.81.d:0 "One of our more unusual venues for our Völkerschau has been Shanghai. While usually this sort of entertainment and education appeals only to the more racially-minded societies, it apparently was considered especially exotic in those foreign lands, and brought us in a great deal of money."
 mittel.81.a:0 "Money is good."
-mittel.82.t:0 "Die Neue Völkerschau Arrives in San Fransisco"
+mittel.82.t:0 "Die Neue Völkerschau Arrives in San Francisco"
 mittel.82.d:0 "The Germans have put on a fantastic live show, part carnival and part zoo. It's got over 1,000 authentic African Tribesmen and women, and exotic animals. Despite protests from the city's black clergy that the show is dehumanizing, comparing it to a 'human zoo', the show drew in several million attendees."
 mittel.82.a:0 "It's all good clean fun."
-mittel.83.t:0 "Die Neue Völkerschau Arrives in San Fransisco"
+mittel.83.t:0 "Die Neue Völkerschau Arrives in San Francisco"
 mittel.83.d:0 "Our Neue Völkerschau debuted in San Francisco to a great turnout. Americans have always been a fan of these kinds of exhibitions ever since their 1904 World's Fair, right after the Spanish-American war, where they displayed the inhabitants of their new imperial holdings to an eager public."
 mittel.83.a:0 "Another great show."
 mittel.84.t:0 "Die Neue Völkerschau Arrives in London"
@@ -621,16 +644,16 @@ mittel.90.t:0 "Resistance to the War Economy"
 mittel.90.d:0 "Shifting to a war economy has pushed our colonial population and our armies to their limit. They are ready, but they are not happy with wartime restrictions in a time of peace!"
 mittel.90.a:0 "Come on, where's your patriotism?"
 mittel.91.t:0 "African Divisions Programme"
-mittel.91.d:0 "To provide real support to Germany from our seat in Mittelafrika, we must provide them with well-trained African divisions. To do this we will start the 'African Divisions' programme, which will train men to fight in the European front."
+mittel.91.d:0 "To provide real support to Germany from our seat in Mittelafrika, we must provide them with well-trained African divisions. To do this we will start the 'African Divisions' programme which will train men to fight in the European front."
 mittel.91.a:0 "For Kaiser and Vaterland!"
 mittel.92.t:0 "First African Divisions Arrive"
-mittel.92.d:0 "Under the reforms of our New Colonial Regime in Africa, African recruits will not simply be placed in colonial policing roles, but provide new divisions for our army,in Europe. The extra manpower is welcome, given the tense situation in Europe."
+mittel.92.d:0 "Under the reforms of our New Colonial Regime in Africa, African recruits will not simply be placed in colonial policing roles, but provide new divisions for our army in Europe. The extra manpower is welcome, given the tense situation in Europe."
 mittel.92.a:0 "Excellent!"
-mittel.93.t:0 "Elite African Divisions Arrive"
-mittel.93.d:0 "Recruited from the best the continent has to offer, from 'warrior tribes', and trained in survival tactics in the harsh environment of Africa, these divisions will fight with elan and spirit."
+mittel.93.t:0 "Elite African Cavalry Arrive"
+mittel.93.d:0 "Recruited from the best the continent has to offer and trained in survival tactics in the harsh environment of Africa these divisions will fight with elan and spirit."
 mittel.93.a:0 "Wait till the French see this!"
 mittel.94.t:0 "Motorised African Divisions Arrive"
-mittel.94.d:0 "Though there were doubts it was possible, our African administration has trained 3 divisions worth of drivers and gunners from African recruits, on the Statthalter's personal insistence. The join a growing body of divisions that are entirely moved by machine power."
+mittel.94.d:0 "Though there were doubts it was possible, our African administration has trained two divisions worth of drivers and gunners from African recruits on the Statthalter's personal insistence. They join a growing body of divisions that are entirely moved by machine power."
 mittel.94.a:0 "I'd never thought I'd see that!"
 mittel.95.t:0 "Mutara III Visits Göttingen University"
 mittel.95.d:0 "Prince Karl Mutara III of Rudahigwa has returned from a tour of the University of Göttingen in Lower Saxony. He was shown our latest discoveries in physics, spoke with the Professors of African Languages, and was shown the Göttingen State and University Library. It all made a strong impression on him, and he has urged his people to adopt the natural sciences of Europe, and provided for the creation of a library in Kigali."
@@ -736,7 +759,7 @@ mittel.124.t:0 "The Kaiser Appoints Schmitt"
 mittel.124.d:0 "The Kaiser has decided to uphold the will of the Mittelafrikan people, and has appointed the man we elected as Statthalter. Today is a great day for Mittelafrika."
 mittel.124.a:0 "Hoorah!"
 mittel.125.t:0 "The Kenyan Church"
-mittel.125.d:0 "When we moved into British Territory in 1926, the British hold on the territory was dangerously weak after 7 years of warfare. The 1926 British strikes coincided with a series of protests by the natives in British East Africa. In 1925, the Church of Scotland Mission declared the practice of female circumcision banned for Christians, labelling it Female Genital Mutilation. For the dominant ethnic group of the region, the Kikuyu, the practice, which they call irua, is the 'conditio sine qua non' of the whole teaching of tribal law, religion. They felt so strongly about this that it has caused a rupture within the Christian community in Kikuyuland. The Anglican Church quickly followed the Scottish Church in banning the practice, but in response, the Kikuyu have created their own 'African Churches'. They've established their own theological schools, which have become a hotbed of Kikuyu nationalism. At the same time, with the fall of Britain to socialism, there is a schism within the Anglican and Scottish churches themselves. In Canterbury Cathedral, the Union of Britain has declared Archbishop John Hobbis Harris as the head of worldwide Anglican communion, while in Ottawa, the British Monarch has declared, under his authority as Supreme Governor of the Church of England Archbishop Cosmo Gordan Lang as the head of the communion. The Scottish Kirk has seen a similar schism. It is impossible to tell for certain who any given Anglican minister believes is the real head of the church, and they might be listening to Archbishop Harris, who is a campaigner against imperialism in Africa."
+mittel.125.d:0 "When we moved into British Territory in 1925, the British hold on the territory was dangerously weak after 7 years of warfare. In the same year British strikes coincided with a series of protests by the natives in British East Africa; the Church of Scotland Mission declared the practice of female circumcision banned for Christians, labelling it 'sexual mutilation of women'. For the dominant ethnic group of the region, the Kikuyu, the practice, which they call irua, is the 'conditio sine qua non' of the whole teaching of tribal law, religion. They felt so strongly about this that it has caused a rupture within the Christian community in Kikuyuland. The Anglican Church quickly followed the Scottish Church in banning the practice, but in response, the Kikuyu have created their own 'African Churches'. They've established their own theological schools, which have become a hotbed of Kikuyu nationalism. At the same time, with the fall of Britain to socialism, there is a schism within the Anglican and Scottish churches themselves. In Canterbury Cathedral, the Union of Britain has declared Archbishop John Hobbis Harris as the head of worldwide Anglican communion, while in Ottawa the British Monarch has declared, under his authority as Supreme Governor of the Church of England, Archbishop Cosmo Gordon Lang to be the head of the communion. The Scottish Kirk has seen a similar schism. It is impossible to tell for certain who any given Anglican minister believes is the real head of the church, and they might be listening to Archbishop Harris, who is a campaigner against imperialism in Africa."
 mittel.125.a:0 "Favour the Kikuyu schools."
 mittel.125.b:0 "Favour the Anglican schools."
 mittel.125.c:0 "Suppress both, and encourage the German secular schools."
