--- a/Kaiserreich Korean Translation/localisation/KR_Namibia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Namibia_l_english.yml
@@ -2,23 +2,23 @@ l_english:
 #Ideas
 
 #Ovambo Revolt Ideas#
-NAM_idea_increase_conscription1:0 "징병 상승"
+NAM_idea_increase_conscription1:0 "Increased Conscription"
 NAM_idea_increase_conscription1_desc:0 "Our current situation has caused us to raise our conscription policy. However, the natives to Namibia are less than pleased that they are being dragged into a German civil war."
 
-NAM_idea_increase_conscription2:0 "강제 징병"
+NAM_idea_increase_conscription2:0 "Forced Conscription"
 NAM_idea_increase_conscription2_desc:0 "Our conscription policies have been further increased due to us losing the current conflict. The natives are furious that so many of their people are dying on the front lines of a German war, but they don't get to decide much."
 
-NAM_idea_colonial_spirit:0 "식민 정신"
+NAM_idea_colonial_spirit:0 "Colonial Spirit"
 NAM_idea_colonial_spirit_desc:0 "With full German backing, our victory is inevitable and morale is as high as it's ever been before. Victory will be ours!"
 
 #Re-established German Rule Ideas#
-NAM_idea_german_military:0 "독일 군사"
+NAM_idea_german_military:0 "German Military"
 NAM_idea_german_military_desc:0 "Due to our recent reintegration into the fatherland, our military has become very Prussian styled, with a purely German volunteer force with limited Askari recruitment. While we can review our policy on this in the future, it remains as how our military functions for now."
 
-NAM_civil_war_industry:0 "내전산업"
+NAM_civil_war_industry:0 "Civil War Industry"
 NAM_civil_war_industry_desc:0 "The ongoing civil war has brought our already limited industry to a complete halt. This most likely won't end until the end of the civil war, and even then will continue to affect us even afterwards."
 
-NAM_colonial_nation:0 "식민 국가"
+NAM_colonial_nation:0 "Colonial Nation"
 NAM_colonial_nation_desc:0 "Südwestafrika has officially returned into the German fold, and intends to stay that way for a long as possible. The last thing we want to do is bother the fatherland with internal matters, and deal with them ourselves."
 
 #Industrial Ideas#
@@ -55,8 +55,8 @@ NAM_idea_true_german_military_desc_2:0 "Using the superiority of German equipmen
 NAM_idea_native_recruitment:0 "Native Recruitment"
 NAM_idea_native_recruitment_desc:0 "The local population is the perfect cannon-fodder to feed to our enemies, despite the loss of the professionalism within our force."
 
-NAM_idea_native_recruitment:0 "Native Recruitment and Labour"
-NAM_idea_native_recruitment_desc:0 "The local population is the perfect cannon-fodder to feed to our enemies, despite the loss of the professionalism within our force. Putting the mass fo them to use for labour will also speed up our industrialisation."
+#NAM_idea_native_recruitment:0 "Native Recruitment and Labour" already defined below
+#NAM_idea_native_recruitment_desc:0 "The local population is the perfect cannon-fodder to feed to our enemies, despite the loss of the professionalism within our force. Putting the mass fo them to use for labour will also speed up our industrialisation." already defined below
 
 NAM_idea_askari_cooperation:0 "Askari Cooperation"
 NAM_idea_askari_cooperation_desc:0 "Askari's are actual trained African forces, attempting to train a small amount of these will help with our recruitment."
@@ -83,7 +83,7 @@ NAM_generic_army_1:0 "Namibian Defence Corp"
 NAM_generic_army_1_desc:0 "Now that we have finally achieved our independence, we must be sure to never lose it again. For an independent Namibia!"
 
 NAM_generic_army_2:0 "United and Ready"
-NAM_generic_army_2_Desc:0 "Now that we have finally achieved our independence, we must be sure to never lose it again. For an independent Namibia!"
+NAM_generic_army_2_desc:0 "Now that we have finally achieved our independence, we must be sure to never lose it again. For an independent Namibia!"
 
 NAM_germans_removed:0 "German Namibians Removed"
 NAM_germans_removed_desc:0 "German Namibians are not native to our land, and are an imperialist construct. They must be removed."
@@ -149,29 +149,29 @@ NAM_totalist_party_long:0 "Südwestafrikanische Partei der Internationale"
 NAM_syndicalist_party:0 "SSP"
 NAM_syndicalist_party_long:0 "Südwestafrikanische Syndikalistische Partei"
 
-NAM_radical_socialist_party:0 "ARP"
-NAM_radical_socialist_party_long:0 "Arbeiter Revolutionäre Partei"
+NAM_radical_socialist_party:0 "RAP"
+NAM_radical_socialist_party_long:0 "Revolutionäre Arbeiterpartei"
 
 NAM_social_democrat_party:0 "SWAVO"
 NAM_social_democrat_party_long:0 "Südwestafrikanische Volksorganisation"
 
 NAM_social_liberal_party:0 "SWANV"
-NAM_social_liberal_party_long:0 "Südwestafrikanische Nationalverein"
+NAM_social_liberal_party_long:0 "Südwestafrikanischer Nationalverein"
 
 NAM_market_liberal_party:0 "OMEGV"
-NAM_market_liberal_party_long:0 "Otavi Minen und Eisenbahn-Gesellschaft Verwaltung"
+NAM_market_liberal_party_long:0 "Otavi Minen- und Eisenbahngesellschaft"
 
 NAM_social_conservative_party:0 "RP"
 NAM_social_conservative_party_long:0 "Republikanische Partei"
 
 NAM_authoritarian_democrat_party:0 "SKG"
-NAM_authoritarian_democrat_party_long:0 "Südwestafrikan Kolonialgesellschaft"
+NAM_authoritarian_democrat_party_long:0 "Südwestafrikanische Kolonialgesellschaft"
 
 NAM_paternal_autocrat_party:0 "SKR"
-NAM_paternal_autocrat_party_long:0 "Südwestafrikan Aktionspartei"
+NAM_paternal_autocrat_party_long:0 "Südwestafrikanische Aktionspartei"
 
 NAM_national_populist_party:0 "EB"
-NAM_national_populist_party_long:0 "Das Einheimische Bewegung"
+NAM_national_populist_party_long:0 "Einheimische Bewegung"
 
 #Focuses
 
@@ -344,7 +344,7 @@ NAM_syndicalist_liberation:0 "Syndicalist Liberation"
 NAM_syndicalist_liberation_desc:0 "The Syndicalist tides have managed to truly free Namibia from the chaos of German rule. The revolution in Africa begins!"
 
 NAM_first_congress:0 "First Namibian Syndicalist Congress"
-NAM_first_congress_desc:0 "Like all traditional European and Syndicalist countries, we must hold the first ever Namibian Syndicalist Convention. There are three main contenders to win, the ARP(Arbeiter Revolutionäre Partei), the SSP(Südwestafrikanische Syndikalistische Partei), and the SPI(Südwestafrikanische Partei der Internationale)."
+NAM_first_congress_desc:0 "Like all traditional European and Syndicalist countries, we must hold the first ever Namibian Syndicalist Convention. There are three main contenders to win, the RAP(Revolutionäre Arbeiterpartei), the SSP(Südwestafrikanische Syndikalistische Partei), and the SPI(Südwestafrikanische Partei der Internationale)."
 
 NAM_cultural_assimilation:0 "Cultural Assimilation"
 NAM_cultural_assimilation_desc:0 "With the congress over, we must make sure that the many tribes that are within Namibia see each other all as Namibians rather than their own people group."
@@ -541,7 +541,7 @@ nam.29.d:0 "With the success of the Barotseland campaign, the area has largely d
 nam.29.a:0 "Damn traitors"
 
 nampuppet.1.t:0 "[GetYear] Syndicalist Convention"
-nampuppet.1.d:0 "With the revolution finally being brought to Namibia, we must hold a convention like all formal Syndicalist countries. Three main parties have ended up being contenders. There is the Radical Socialist ARP, which is run by young revolutionaries who wanted to be free from Mittelafrika, the SSP which wanted to bring a revolution to the entirety of Mittelafrika, and the Internationale aligned SPI which believe a European Revolution is necessary before an African one. The victor turned out to be..."
+nampuppet.1.d:0 "With the revolution finally being brought to Namibia, we must hold a convention like all formal Syndicalist countries. Three main parties have ended up being contenders. There is the Radical Socialist RAP, which is run by young revolutionaries who wanted to be free from Mittelafrika, the SSP which wanted to bring a revolution to the entirety of Mittelafrika, and the Internationale aligned SPI which believe a European Revolution is necessary before an African one. The victor turned out to be..."
 
 nampuppet.2.ds:0 "German Namibians are a minority among normal Namibians, which migrated here when the German came into control in the 1880s. Unexpectedly, German Namibians have merged well with the Namibian culture and have even formed their own subculture among normal Namibians. However, some radical factions within the Congress think all German Namibians should be removed from Namibia, as they serve as a reminder of our time under imperialist German rule."
 nampuppet.2.da:0 "German Namibians are a minority among normal Namibians, which migrated here when the German came into control in the 1880s. Unexpectedly, German Namibians have merged well with the Namibian culture and have even formed their own subculture among normal Namibians. However, the current monarchy holds a strong grudge against German colonialism from the past uprisings against German rule and the many purges of the Namibian population."
@@ -556,7 +556,7 @@ nampuppet.5.d:0 "Due to our efforts, the German revolt has officially come to an
 
 nampuppet.6.d:0 "With the revolt over and the situation calmed, the German 'Namibians' have finally left our home. The exportation was a sad time for many Namibians who got close to the Germans, and is still left a highly unpopular decision among our government. We'll need to deal with the consequences of this into the future, for the rest of Namibia's existence."
 
-nampuppet.7.d:0 "With Namibia recently being liberated from German rule and put under a Democratic mandate, the conditions are right to host the First Namibian Elections. There are four main parties running, the Republikanische Partei which focuses on more right for the native tribes in the area, the Otavi Minen und Eisenbahn-Gesellschaft Verwaltung which wants to build more railways within Namibia, the Südwestafrikanische Nationalverein which argues for consolidation in the country and largely removing tribal rule, and the Südwestafrikanische Volksorganisation, an Ovambo based party which wants greater cooperation between tribes and an increase of Christian morals. All these parties have a chance of winning, but the party which came out on top is..."
+nampuppet.7.d:0 "With Namibia recently being liberated from German rule and put under a Democratic mandate, the conditions are right to host the First Namibian Elections. There are four main parties running, the Republikanische Partei which focuses on more right for the native tribes in the area, the Otavi Minen und Eisenbahn-Gesellschaft which wants to build more railways within Namibia, the Südwestafrikanischer Nationalverein which argues for consolidation in the country and largely removing tribal rule, and the Südwestafrikanische Volksorganisation, an Ovambo based party which wants greater cooperation between tribes and an increase of Christian morals. All these parties have a chance of winning, but the party which came out on top is..."
 
 nampuppet.8.t:0 "[From.GetName] Requests Guns"
 nampuppet.8.d:0 "[From.GetName] due to it's small industry and population is trying to build up an army to defend itself in order to not inconvenience us. They request 2000 guns in order to build up this force, and promise to not bother us again after this."
