--- a/Kaiserreich Korean Translation/localisation/KR_Japan_Domestic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_Domestic_l_english.yml
@@ -36,17 +36,17 @@ JAP_COL_PREP:0 "식민화를 준비하라"
 niigata_riots:0 "니가타 민란"
 JAP_imperial_gov:0 "제국을 위하여!"
 JAP_DEM_GOV:0 "동양의 민주주의"
-control_faction:0 "주우하 파벌"
+control_faction:0 "중앙파"
 Fund_Adjustment_Ordinance:0 "기금 조정 조례"
 Fund_Adjustment_Ordinance_desc:0 "기금 조정 조례는 중앙 집권 제도에 의한 일련의 '국가 방위 조례'의 첫번째 법령입니다. 일본의 국영 은행은 이제 자본 투자, 기업의 설립, 증권의 인수나 매수를 통제할 수 있는 권한을 갖고 있습니다. 이것은 정부가 전쟁 산업에 자금을 통제하고 할하는 것을 허용할 것입니다."
 National_Total_Mobilisation_Ordinance:0 "국가 총 동원법"
 National_Total_Mobilisation_Ordinance_desc:0 "국가 총 동원령은 정부가 사용 가능한 모든 자원과 인력을 통제하고 동원할 수 있는 수단을 제공하도록 고안되었습니다. 전쟁 기간 동안, 우리는 노동 공급, 상품의 생산, 금융 상호작용, 산업과 노동 조직, 가격, 그리고 언론에 대한 완전한 통제권을 갖게 될 것입니다."
-Military_Training_Curriculum:0 "군사 훈련 커리큘럼"
-Military_Training_Curriculum_desc:0 "Military training was firstly introduced into the compulsory physical education curriculum in 1925 by the Tanaka regime, as a way to subdue growing anti-militarist influence and discontent among students, and was discontinued with the Constitutional Restoration of 1926. It is time to reverse that decision."
-National_Service_Draft_Ordinance_1:0 "The National Service Draft Ordinance"
-National_Service_Draft_Ordinance_1_desc:0 "The National Service Draft Ordinance is a supplement to the earlier National Total Mobilisation Ordinance, particularly its Article 4, which had enabled the Government to mobilise the labour force. The new Ordinance authorises the Government to conscript workers for war industries."
-National_Service_Draft_Ordinance_2:0 "The National Service Draft Ordinance"
-National_Service_Draft_Ordinance_2_desc:0 "The National Service Draft Ordinance is a supplement to the earlier National Total Mobilisation Ordinance, particularly its Article 4, which had enabled the Government to mobilise the labour force. The new Ordinance authorises the Government to conscript workers for war industries."
+Military_Training_Curriculum:0 "교련"
+Military_Training_Curriculum_desc:0 "1925년, 다나카 정권은 학생들 사이에서 반군국주의 영향력과 불만이 쌓이는 것을 막기 위해, 체육 커리큘럼에 의무시간을 할당하여 교련을 처음 도입하였습니다. 1926년 헌법 복원으로 인해 교련이 중지되었으나, 이제 이 결정을 되돌려야 합니다."
+National_Service_Draft_Ordinance_1:0 "국민 징용령"
+National_Service_Draft_Ordinance_1_desc:0 "국민 징용령은 국가 총동원법의 부칙으로, 특히 정부가 노동력을 징집할 수 있는 4조에 근거를 두고 있습니다. 새 법령은 노동자들을 징집하여 전시 경제를 위해 복무하도록 강제할 것입니다."
+National_Service_Draft_Ordinance_2:0 "국민 징용령"
+National_Service_Draft_Ordinance_2_desc:0 "국민 징용령은 국가 총동원법의 부칙으로, 특히 정부가 노동력을 징집할 수 있는 4조에 근거를 두고 있습니다. 새 법령은 노동자들을 징집하여 전시 경제를 위해 복무하도록 강제할 것입니다."
 economic_reform:0 "경제 개혁"
 JAP_change_rail:0 "철도규격 변경"
 
