--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -408,10 +408,11 @@ annex.116.b:0 "아프가니스탄을 해방하라!"
 annex.117.t:0 "쿠바 합병"
 annex.117.d:0 "We have taken control over Cuba and secured American hegemony throughout the Caribbean. What should we do with the 'liberated' island?"
 annex.117.a:0 "우호적인 쿠바로 해방하라!"
-annex.117.b:0 "군사점령을 유지한다."
+annex.117.b:0 "...그리고 관타나모를 반환하라"
+annex.117.c:0 "군사점령을 유지한다."
 annex.118.t:0 "시암 합병"
 annex.118.d:0 "We have taken control over the Thai state and secured our dominance on the upper part of the Malay Peninsular. Now the pressing issue for our government is figuring out what we should do with the newly 'liberated' Thai provinces."
-annex.118.a:0 "우호적인 시암으로 해방하라!"
+annex.118.a:0 "우호적인 시암으로 해방하라"
 annex.118.b:0 "군사점령을 유지한다."
 annex.118.c:0 "Install an Chakrabongse Siamese puppet!"
 annex.118.e:0 "Install an Paribatra Siamese puppet!"
@@ -541,15 +542,16 @@ annex.143.a:0 "도미니카 공화국에 친선 정부를 세우고 해방하라
 annex.143.b:0 "군사점령을 계속해라!"
 annex.144.t:0 "쿠바의 운명"
 annex.144.d:0 "쿠바 섬에서의 짧은 작전 끝에, 우린 마침내 쿠바의 방어를 무너트렸습니다. 하바나는 이제 우리 손 안에 있습니다! 우리는 이제 쿠바의 미래를 결정해야 합니다."
-annex.144.a:0 "쿠바에 친선 정부를 세우고 해방하라!"
-annex.144.b:0 "군사점령을 계속해라!"
+annex.144.a:0 "쿠바에 친선 정부를 세우고 해방하라"
+annex.144.b:0 "...그리고 관타나모를 반환하라"
+annex.144.c:0 "군사점령을 계속해라!"
 annex.145.t:0 "멕시코의 운명"
 annex.145.d:0 "멕시코에서의 긴 작전 끝에, 우린 마침내 멕시코의 방어를 무너트렸습니다. 멕시코 시티는 이제 우리 손 안에 있습니다! 우리는 이제 멕시코의 미래를 결정해야 합니다."
 annex.145.a:0 "멕시코에 친선 정부를 세우고 해방하라!"
 annex.145.b:0 "군사점령을 계속해라!"
 annex.146.t:0 "칼리치아의 운명"
 annex.146.d:0 "갈리치아에서의 짧은 작전 끝에, 우린 마침내 갈리치아의 방어를 무너트렸습니다. 르보프는 이제 우리 손 안에 있습니다! 우리는 이제 갈리치아의 미래를 결정해야 합니다."
-annex.146.a:0 "갈리치아에 친선정부를 설립하고 해방하라!"
+annex.146.a:0 "갈리치아에 친선정부를 설립하고 해방하라"
 annex.146.b:0 "폴란드 친구들에게 주어라"
 annex.146.c:0 "우크라이나 친구들에게 주어라"
 annex.146.e:0 "군사점령을 계속해라!"
@@ -720,8 +722,8 @@ annex.179.c:0 "지역 공화주의 운동을 지지한다!"
 annex.179.e:0 "노동 조합 연방을 세워라!"
 annex.179.f:0 "충성스러운 동맹에 이 땅을 넘겨주어라..."
 annex.180.t:0 "중국 토지 처리"
-annex.180.d:0 "After the seizure of some of the coastal cities of China once controlled by European powers or International conglomerates we found ourselves with a decision to make. Should we keep them or give them to our loyal allies?"
-annex.180.dJAP:0 "We have seizure some of the coastal cities of China once controlled by European powers or International conglomerates. Now their riches will work for us."
+annex.180.d:0 "After the seized of some of the coastal cities of China once controlled by European powers or International conglomerates we found ourselves with a decision to make. Should we keep them or give them to our loyal allies?"
+annex.180.dJAP:0 "We have seized some of the coastal cities of China once controlled by European powers or International conglomerates. Now their riches will work for us."
 annex.180.a:0 "군사점령을 계속해라!"
 annex.180.aJAP:0 "훌륭하군."
 annex.180.b:0 "충성스러운 동맹에 이 땅을 넘겨주어라..."
@@ -989,11 +991,12 @@ annex.247.d:0 "Our armies have taken control of the southern part of the Levant,
 annex.247.a:0 "팔레스타인 괴뢰국를 수립해라"
 annex.247.b:0 "군사점령을 유지한다"
 annex.247.c:0 "Give it to our Mishriqi allies"
+annex.248.t:0 "쿠르디스탄의 운명"
 annex.248.d:0 "Our armies have taken control of the northern Levant region, and the local Kurdish population is clamoring for self-government. What should we do?"
-annex.248.a:0 "Set up a puppet Kurdish state"
-annex.248.b:0 "Give it to our Turkish allies"
-annex.248.c:0 "Give it to our Iranian allies"
-annex.249.t:0 "The Fate of Cambodia"
+annex.248.a:0 "괴뢰 쿠르드 국가를 설립하라"
+annex.248.b:0 "우리의 터키 친구들에게 주어라"
+annex.248.c:0 "우리의 이란 친구들에게 주어라"
+annex.249.t:0 "캄보디아의 운명"
 annex.249.d:0 "Our armies have taken control of Phnom Penh, and the local Cambodians are clamoring for self-government. We should decide what's to be done with the region."
 annex.249.a:0 "Set up a puppet Cambodian state"
 annex.249.b:0 "Continue the occupation"
