--- a/Kaiserreich Korean Translation/localisation/KR_CA_Military_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_CA_Military_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### FLAGS ###
 cenmil_natpop_victory:0 "The Radicals have secured their position of power"
@@ -277,8 +277,6 @@ cenmil_wait_tt:0 "Once we control the territory in question, we will receive an 
 cenmil_costa_rica_guaranteed_tt:0 "Costa Rica is §RNot§! Guaranteed"
 cenmil_panama_guaranteed_tt:0 "Panama is §RNot§! Guaranteed"
 cenmil_window_of_oppurtunity_tt:0 "The United States is §RUnable§! to intervene"
-
-blame_roparex_tt:0 "§RThis option doesn't add a Chief of Staff yet, will be fixed in a hotfix§!"
 
 ### EVENTS ###
 
@@ -569,53 +567,54 @@ cenmil.241.t:0 "New main Atlantic Port"
 cenmil.241.d:0 "Much less developed than the Pacific coast, our Atlantic coast is missing an important trading port, which reduces our trade capacities with the Caribbean nations and the eastern United States. Which Atlantic port will receive the honour of being the new main trading port?"
 cenmil.241.a:0 "Puerto Barrios"
 cenmil.241.b:0 "Puerto Castilla"
-cenmil.241.c:0 "We are reconsidered"
+cenmil.241.c:0 "Let us reconsider"
 
 cenmil.242.t:0 "Fighters for the FARCA"
 cenmil.242.d:0 "The Fuerza Area Republicana de Centroamerica is in need of new fighter aircraft to fly interception missions, and as we have no domestic aircraft designers and producers, we will need to buy foreign designs."
 cenmil.242.a:0 "The Fokker D.XXI"
 cenmil.242.b:0 "Many Fokker D.XXI"
 cenmil.242.c:0 "The Nakajima Ki-27"
-cenmil.242.e:0 "We are reconsidered"
+cenmil.242.e:0 "Let us reconsider"
 
 cenmil.243.t:0 "CAS Aircraft for the FARCA"
 cenmil.243.d:0 "The Fuerza Area Republicana de Centroamerica is in need of new close air support aircraft to aid our troops on the ground, and as we have no domestic aircraft designers and producers, we will need to buy foreign designs."
 cenmil.243.a:0 "The Kawasaki Ki-32"
 cenmil.243.b:0 "The Blohm/Voss Ha 137"
 cenmil.243.c:0 "The Fairy Battle"
-cenmil.243.e:0 "We are reconsidered"
+cenmil.243.e:0 "Let us reconsider"
 
 cenmil.244.t:0 "Bombers for the FARCA"
 cenmil.244.d:0 "The Fuerza Area Republicana de Centroamerica is in need of new bomber aircraft to attack enemy industrial and infrastructural targets, and as we have no domestic aircraft designers and producers, we will need to buy foreign designs."
 cenmil.244.a:0 "The Mitsubishi Ki-21"
 cenmil.244.b:0 "The Fokker T.V"
 cenmil.244.c:0 "The Dornier Do-19"
-cenmil.244.e:0 "We are reconsidered"
+cenmil.244.e:0 "Let us reconsider"
 
 cenmil.245.t:0 "Naval Bombers for the FARCA"
 cenmil.245.d:0 "The Fuerza Area Republicana de Centroamerica is in need of new naval bomber aircraft to support our naval forces, and as we have no domestic aircraft designers and producers, we will need to buy foreign designs."
 cenmil.245.a:0 "The G3M1 Model 11"
 cenmil.245.b:0 "The Arado Ar 195"
-cenmil.245.c:0 "We are reconsidered"
+cenmil.245.c:0 "Let us reconsider"
 
 cenmil.246.t:0 "Selecting a Main military Naval Base"
 cenmil.246.d:0 "The Armada Republicana Centroamericana will need a main naval base to operate from in the Caribbean Sea, as our current ports are unsuited for the needs of the navy."
 cenmil.246.a:0 "Puerto Barrios"
 cenmil.246.b:0 "Puerto Castilla"
 cenmil.246.c:0 "Cuidad de Belize"
-cenmil.246.e:0 "We are reconsidered"
+cenmil.246.e:0 "Let us reconsider"
 
+### This has twice the same loc because I was too lazy to replace the desc condition in the actual event files, this'll do. If anyone sees this and is mad, feel free to change it :shrug:
 cenmil.247.t:0 "The Destroyers have arrived"
-cenmil.247.d.CAR:0 "The 4 destroyers we have purchased from the Bulgarian navy have arrived in the Caribbean Sea and are ready to be put into action."
-cenmil.247.d.CAC:0 "The 4 destroyers we have ordered the construction of in our shipyards have re-joined the rest of our navy and are now ready for service."
+cenmil.247.d.CAR:0 "The 4 destroyers we have ordered the construction of in our shipyards have re-joined the rest of our navy and are now ready for service."
+cenmil.247.d.CAC:0 "The 4 destroyers we have ordered the construction of in our shipyards have re-joined the rest of our navy and are now ready for service."     
 cenmil.247.a:0 "Great!"
 
 cenmil.248.t:0 "The old Cruiser has arrived"
-cenmil.248.d:0 "The old light cruiser we have purchased from the Brazilian navy has arrived in the Caribbean Sea and is ready to be put into action."
+cenmil.248.d:0 "The old light cruiser we have purchased has arrived in the Caribbean Sea and is ready to be put into action."
 cenmil.248.a:0 "Great!"
 
 cenmil.249.t:0 "The Flagship has arrived"
-cenmil.249.d:0 "The modern light cruiser we have purchased has left the Ukrainian dockyard at Mykolaiv some weeks ago and has arrived in the Caribbean Sea and is ready to be put into action."
+cenmil.249.d:0 "The modern light cruiser we have purchased has arrived in the Caribbean Sea and is ready to be put into action."
 cenmil.249.a:0 "Great!"
 
 cenmil.250.t:0 "Major Strike!"
