--- a/Kaiserreich Korean Translation/localisation/KR_Central_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Central_America_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Parties ###
 CEN_totalist_party_long:0 "Partido Maximista"
@@ -13,8 +13,8 @@ CEN_social_democrat_liberal_long:0 "Partido del Trabajo"
 CEN_social_democrat_party:0 "PP"
 CEN_social_liberal_party_long:0 "Partido Liberal"
 CEN_social_liberal_party:0 "PL"
-CEN_market_liberal_party_long:0 "Partido Democrático de Centroamérica"
-CEN_market_liberal_party:0 "PD"
+CEN_market_liberal_party_long:0 "Partido de Unificación Democratica"
+CEN_market_liberal_party:0 "PUD"
 CEN_social_conservative_party_long:0 "Partido Unionista"
 CEN_social_conservative_party:0 "PU"
 CEN_authoritarian_democrat_party_long:0 "Administración Militar"
