--- a/Kaiserreich Korean Translation/localisation/KR_Central_America_Soc_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Central_America_Soc_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 centroamerica_old_carrier:0 "Purchase an old carrier from the Americans"
 ###Opinion Modifier
@@ -22,6 +22,8 @@ CEN_chosen_basket:0 "Have taken the focus: The Socialist Breadbasket"
 CEN_chosen_industry:0 "Have taken the focus: A Step Forward"
 CEN_chose_militias:0 "Have taken the focus: Retain the Militias"
 CEN_chose_army:0 "Have taken the focus: Consolidate the Army"
+
+CEN_internationale_exists:0 "The Internationale exists"
 
 ### Focuses ###
 CEN_congress:0 "The First Central American Congress"  
@@ -57,7 +59,7 @@ CEN_retain_militias_desc:0 "Forests, mountains and coasts, we have them all. Eac
 CEN_socialist_breadbasket:0 "The Socialist Breadbasket"
 CEN_socialist_breadbasket_desc:0 "The backbone of any nation consists of the farms, the agrarians! Ensuring that that backbone remains strong means we can support a great nation!"
 CEN_a_step_forward:0 "A Step Forward"
-CEN_a_step_forward_desc:0 "If we want to maintain relevant, we must move on with the times and industrialize. Factories are the future!"
+CEN_a_step_forward_desc:0 "If we want to maintain relevance, we must move on with the times and industrialize. Factories are the future!"
 CEN_peoples_elections:0 "The People's Elections"
 CEN_peoples_elections_desc:0 "We represent everyone, and everyone will be allowed to vote for who will help run this nation!"
 CEN_congress_elections:0 "The Congress' Elections"
@@ -187,9 +189,9 @@ CEN_defending_home_desc:0 "What keeps our nation safe is our army, what keeps th
  
 CEN_a_new_air_force:0 "Ejército del Aire"
 CEN_a_new_air_force_desc:0 "We must organise a large meeting between all branches of the air force to re-organise and decide the structure of our combined Ejércite del Aire de Céntroamerica!"
-CEN_air_combine:0 "An Combined Air Force"
+CEN_air_combine:0 "A Combined Air Force"
 CEN_air_combine_desc:0 "Being a union of nations, our air force must also be united. We shall concentrate our air bases at our capital and ensure we can send a large force anywhere the enemy might attack!"
-CEN_air_spread:0 "An Spread-Out Air Force"
+CEN_air_spread:0 "A Spread-Out Air Force"
 CEN_air_spread_desc:0 "Each nation knew its own terrain best. We shall let each region set up their own branches of the air force to protect the air!"
 CEN_air_construction:0 "Airfield Construction"
 CEN_air_construction_desc:0 "Having provided part of our country with airbases is not enough. We must make an organised effort to speed up the construction of more airstrips, hangars and everything else needed to a functioning air force!"
@@ -238,6 +240,10 @@ CEN_naval_planes:0 "Naval Airplanes"
 CEN_naval_planes_desc:0 "A joint effort of aerospace engineers and naval engineers has provided some plans for new naval planes. We do not have any carriers to put them on, but its the thought that counts!"
 CEN_naval_carrier:0 "Acquiring an Old Carrier"
 CEN_naval_carrier_desc:0 "Having finally gotten the expertise to craft a carrier does not make one magically appear. While we wait for one to be constructed we can inquire with the Americans if they might have an older model lying around that we could purchase!"
+CEN_join_internationale:0 "Join the Internationale"
+CEN_join_internationale_desc:0 "We have finally gotten all national affairs in order and can look at what we can do for the rest of the world.\nThe Internationale supports our values and we must join them if we want socialism to succeed in this tumultuous times!"
+
+
 ### Events
 
  centro.001.t:0 "Founding of the Central American Congress"
@@ -342,7 +348,7 @@ CEN_naval_carrier_desc:0 "Having finally gotten the expertise to craft a carrier
  centro.027.a:0 "He is too powerful now..."
  centro.027.b:0 "Let us root him out for the last time!"
  centro.028.t:0 "The Native Question"
- centro.028.d:0 "There have been people in these lands for a long time. The natives have been looking at the new congress, not sure what to think. A representative came to us a few days ago, looking for a statement on their status.\nIf they would still be respected and seen as full citizens? We gave them a swift answer:"
+ centro.028.d:0 "There have been people in these lands for a long time. The natives have been looking at the new congress, not sure what to think. A representative came to us a few days ago, looking for a statement on their status.\nIf they would still be respected and seen as full citizens? We gave them a swift answer: "
  centro.028.a:0 "We welcome new and old residents!"
  centro.028.b:0 "We have no need for you!"
  centro.029.t:0 "The Central American Identity"
@@ -368,7 +374,7 @@ CEN_naval_carrier_desc:0 "Having finally gotten the expertise to craft a carrier
  centro.034.a:0 "Let them try their best!"
  centro.034.b:0 "We must work together!"
  centro.035.t:0 "The Coup"
- centro.035.d:0 "The day started calmly, with Callejas working at his desk. Soon the doors busted open and armed men rushed into the room.\nSoon Callejas was in cuffs and led out of the building.\nThe army officers were working together with the Moderados to coup the Maximistas and ensure that the enemies of the revolutions would be taken down and a government loyal to socialism would be installed.\n\nThe nations communications were swiftly taken over and the same message was broadcast all over the nation:"
+ centro.035.d:0 "The day started calmly, with Callejas working at his desk. Soon the doors busted open and armed men rushed into the room.\nSoon Callejas was in cuffs and led out of the building.\nThe army officers were working together with the Moderados to coup the Maximistas and ensure that the enemies of the revolutions would be taken down and a government loyal to socialism would be installed.\n\nThe nations communications were swiftly taken over and the same message was broadcast all over the nation: "
  centro.035.a:0 "A new light shines at the horizon!"
  
  ### Ideas
