--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -695,6 +695,99 @@ IFR_totalist:0 "리비아 튀니지 연방"
 IFR_totalist_ADJ:0 "리비아 튀니지"
 IFR_totalist_DEF:0 "리비아 튀니지 연방"
 
+GBR_irish_home_rule_totalist:0 "Irish Socialist Republic"
+GBR_irish_home_rule_totalist_ADJ:0 "Irish"
+GBR_irish_home_rule_totalist_DEF:0 "Irish Socialist Republic"
+GBR_irish_home_rule_syndicalist:0 "Irish Socialist Republic"
+GBR_irish_home_rule_syndicalist_ADJ:0 "Irish"
+GBR_irish_home_rule_syndicalist_DEF:0 "Irish Socialist Republic"
+GBR_irish_home_rule_radical_socialist:0 "Irish Socialist Republic"
+GBR_irish_home_rule_radical_socialist_ADJ:0 "Irish"
+GBR_irish_home_rule_radical_socialist_DEF:0 "Irish Socialist Republic"
+GBR_irish_home_rule_social_democrat:0 "Dominion of Ireland"
+GBR_irish_home_rule_social_democrat_ADJ:0 "Irish"
+GBR_irish_home_rule_social_democrat_DEF:0 "Ireland"
+GBR_irish_home_rule_social_liberal:0 "Dominion of Ireland"
+GBR_irish_home_rule_social_liberal_ADJ:0 "Irish"
+GBR_irish_home_rule_social_liberal_DEF:0 "Ireland"
+GBR_irish_home_rule_market_liberal:0 "Dominion of Ireland"
+GBR_irish_home_rule_market_liberal_ADJ:0 "Irish"
+GBR_irish_home_rule_market_liberal_DEF:0 "Ireland"
+GBR_irish_home_rule_social_conservative:0 "Dominion of Ireland"
+GBR_irish_home_rule_social_conservative_ADJ:0 "Irish"
+GBR_irish_home_rule_social_conservative_DEF:0 "Ireland"
+GBR_irish_home_rule_authoritarian_democrat:0 "Dominion of Ireland"
+GBR_irish_home_rule_authoritarian_democrat_ADJ:0 "Irish"
+GBR_irish_home_rule_authoritarian_democrat_DEF:0 "Ireland"
+GBR_irish_home_rule_paternal_autocrat:0 "Dominion of Ireland"
+GBR_irish_home_rule_paternal_autocrat_ADJ:0 "Irish"
+GBR_irish_home_rule_paternal_autocrat_DEF:0 "Ireland"
+GBR_irish_home_rule_national_populist:0 "Dominion of Ireland"
+GBR_irish_home_rule_national_populist_ADJ:0 "Irish"
+GBR_irish_home_rule_national_populist_DEF:0 "Ireland"
+
+GBR_bra_totalist:0 "Union of Britain"
+GBR_bra_totalist_ADJ:0 "British"
+GBR_bra_totalist_DEF:0 "the Union of Britain"
+GBR_bra_syndicalist:0 "Union of Britain"
+GBR_bra_syndicalist_ADJ:0 "British"
+GBR_bra_syndicalist_DEF:0 "the Union of Britain"
+GBR_bra_radical_socialist:0 "Union of Britain"
+GBR_bra_radical_socialist_ADJ:0 "British"
+GBR_bra_radical_socialist_DEF:0 "the Union of Britain"
+GBR_bra_social_democrat:0 "British Reconstruction Authority"
+GBR_bra_social_democrat_ADJ:0 "British"
+GBR_bra_social_democrat_DEF:0 "the British Reconstruction Authority"
+GBR_bra_social_liberal:0 "British Reconstruction Authority"
+GBR_bra_social_liberal_ADJ:0 "British"
+GBR_bra_social_liberal_DEF:0 "the British Reconstruction Authority"
+GBR_bra_market_liberal:0 "British Reconstruction Authority"
+GBR_bra_market_liberal_ADJ:0 "British"
+GBR_bra_market_liberal_DEF:0 "the British Reconstruction Authority"
+GBR_bra_social_conservative:0 "British Reconstruction Authority"
+GBR_bra_social_conservative_ADJ:0 "British"
+GBR_bra_social_conservative_DEF:0 "the British Reconstruction Authority"
+GBR_bra_authoritarian_democrat:0 "British Reconstruction Authority"
+GBR_bra_authoritarian_democrat_ADJ:0 "British"
+GBR_bra_authoritarian_democrat_DEF:0 "the British Reconstruction Authority"
+GBR_bra_paternal_autocrat:0 "British Reconstruction Authority"
+GBR_bra_paternal_autocrat_ADJ:0 "British"
+GBR_bra_paternal_autocrat_DEF:0 "the British Reconstruction Authority"
+GBR_bra_national_populist:0 "British Reconstruction Authority"
+GBR_bra_national_populist_ADJ:0 "British"
+GBR_bra_national_populist_DEF:0 "the British Reconstruction Authority"
+
+GBR_britain_totalist:0 "Union of Britain"
+GBR_britain_totalist_ADJ:0 "British"
+GBR_britain_totalist_DEF:0 "the Union of Britain"
+GBR_britain_syndicalist:0 "Union of Britain"
+GBR_britain_syndicalist_ADJ:0 "British"
+GBR_britain_syndicalist_DEF:0 "the Union of Britain"
+GBR_britain_radical_socialist:0 "Union of Britain"
+GBR_britain_radical_socialist_ADJ:0 "British"
+GBR_britain_radical_socialist_DEF:0 "Union of Britain"
+GBR_britain_social_democrat:0 "United Kingdom"
+GBR_britain_social_democrat_ADJ:0 "British"
+GBR_britain_social_democrat_DEF:0 "United Kingdom"
+GBR_britain_social_liberal:0 "United Kingdom"
+GBR_britain_social_liberal_ADJ:0 "British"
+GBR_britain_social_liberal_DEF:0 "the United Kingdom"
+GBR_britain_market_liberal:0 "United Kingdom"
+GBR_britain_market_liberal_ADJ:0 "British"
+GBR_britain_market_liberal_DEF:0 "United Kingdom"
+GBR_britain_social_conservative:0 "United Kingdom"
+GBR_britain_social_conservative_ADJ:0 "British"
+GBR_britain_social_conservative_DEF:0 "United Kingdom"
+GBR_britain_authoritarian_democrat:0 "United Kingdom"
+GBR_britain_authoritarian_democrat_ADJ:0 "British"
+GBR_britain_authoritarian_democrat_DEF:0 "United Kingdom"
+GBR_britain_paternal_autocrat:0 "United Kingdom"
+GBR_britain_paternal_autocrat_ADJ:0 "British"
+GBR_britain_paternal_autocrat_DEF:0 "United Kingdom"
+GBR_britain_national_populist:0 "United Kingdom"
+GBR_britain_national_populist_ADJ:0 "British"
+GBR_britain_national_populist_DEF:0 "United Kingdom"
+
 GBR_republic_authoritarian_democrat:0 "브리튼 공화국"
 GBR_republic_authoritarian_democrat_ADJ:0 "영국"
 GBR_republic_authoritarian_democrat_DEF:0 "브리튼 공화국"
@@ -781,6 +874,68 @@ CANK_authoritarian_democrat_DEF:0 "캐나다 왕국"
 CANK_national_populist:0 "캐나다 왕국"
 CANK_national_populist_ADJ:0 "캐나다"
 CANK_national_populist_DEF:0 "캐나다 왕국"
+
+CAN_britain_totalist:0 "Socialist Commonwealth of Canada"
+CAN_britain_totalist_ADJ:0 "Canadian"
+CAN_britain_totalist_DEF:0 "the Socialist Commonwealth of Canada"
+CAN_britain_syndicalist:0 "Socialist Commonwealth of Canada"
+CAN_britain_syndicalist_ADJ:0 "Canadian"
+CAN_britain_syndicalist_DEF:0 "the Socialist Commonwealth of Canada"
+CAN_britain_radical_socialist:0 "Socialist Commonwealth of Canada"
+CAN_britain_radical_socialist_ADJ:0 "Canadian"
+CAN_britain_radical_socialist_DEF:0 "the Socialist Commonwealth of Canada"
+CAN_britain_social_democrat:0 "Dominion of Canada"
+CAN_britain_social_democrat_ADJ:0 "Canadian"
+CAN_britain_social_democrat_DEF:0 "the Dominion of Canada"
+CAN_britain_social_liberal:0 "Dominion of Canada"
+CAN_britain_social_liberal_ADJ:0 "Canadian"
+CAN_britain_social_liberal_DEF:0 "the Dominion of Canada"
+CAN_britain_market_liberal:0 "Dominion of Canada"
+CAN_britain_market_liberal_ADJ:0 "Canadian"
+CAN_britain_market_liberal_DEF:0 "the Dominion of Canada"
+CAN_britain_social_conservative:0 "Dominion of Canada"
+CAN_britain_social_conservative_ADJ:0 "Canadian"
+CAN_britain_social_conservative_DEF:0 "the Dominion of Canada"
+CAN_britain_authoritarian_democrat:0 "Dominion of Canada"
+CAN_britain_authoritarian_democrat_ADJ:0 "Canadian"
+CAN_britain_authoritarian_democrat_DEF:0 "the Dominion of Canada"
+CAN_britain_paternal_autocrat:0 "Dominion of Canada"
+CAN_britain_paternal_autocrat_ADJ:0 "Canadian"
+CAN_britain_paternal_autocrat_DEF:0 "the Dominion of Canada"
+CAN_britain_national_populist:0 "Dominion of Canada"
+CAN_britain_national_populist_ADJ:0 "Canadian"
+CAN_britain_national_populist_DEF:0 "the Dominion of Canada"
+
+CAF_britain_totalist:0 "West Indies Union"
+CAF_britain_totalist_ADJ:0 "West Indies"
+CAF_britain_totalist_DEF:0 "the West Indies Union"
+CAF_britain_syndicalist:0 "West Indies Union"
+CAF_britain_syndicalist_ADJ:0 "West Indies"
+CAF_britain_syndicalist_DEF:0 "the West Indies Union"
+CAF_britain_radical_socialist:0 "West Indies Union"
+CAF_britain_radical_socialist_ADJ:0 "West Indies"
+CAF_britain_radical_socialist_DEF:0 "the West Indies Union"
+CAF_britain_social_democrat:0 "West Indies Federation"
+CAF_britain_social_democrat_ADJ:0 "West Indies"
+CAF_britain_social_democrat_DEF:0 "the West Indies Federation"
+CAF_britain_social_liberal:0 "West Indies Federation"
+CAF_britain_social_liberal_ADJ:0 "West Indies"
+CAF_britain_social_liberal_DEF:0 "the West Indies Federation"
+CAF_britain_market_liberal:0 "West Indies Federation"
+CAF_britain_market_liberal_ADJ:0 "West Indies"
+CAF_britain_market_liberal_DEF:0 "the West Indies Federation"
+CAF_britain_social_conservative:0 "West Indies Federation"
+CAF_britain_social_conservative_ADJ:0 "West Indies"
+CAF_britain_social_conservative_DEF:0 "the West Indies Federation"
+CAF_britain_authoritarian_democrat:0 "West Indies Federation"
+CAF_britain_authoritarian_democrat_ADJ:0 "West Indies"
+CAF_britain_authoritarian_democrat_DEF:0 "the West Indies Federation"
+CAF_britain_paternal_autocrat:0 "West Indies Federation"
+CAF_britain_paternal_autocrat_ADJ:0 "West Indies"
+CAF_britain_paternal_autocrat_DEF:0 "the West Indies Federation"
+CAF_britain_national_populist:0 "Caribbean State"
+CAF_britain_national_populist_ADJ:0 "West Indies"
+CAF_britain_national_populist_DEF:0 "the Caribbean State"
 
 KAZ_caf_authoritarian_democrat:0 "중앙아시아 연방"
 KAZ_caf_authoritarian_democrat_ADJ:0 "중앙아시아"
