--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -1426,12 +1426,12 @@ CNT_national_populist:0 "이베리아 제국"
 CNT_national_populist_ADJ:0 "이베리아"
 CNT_national_populist_DEF:0 "이베리아 제국"
 
-COL_totalist:0 "혁명주의 콜롬비아"
+COL_totalist:0 "혁명 콜롬비아"
 COL_totalist_ADJ:0 "콜롬비아"
-COL_totalist_DEF:0 "혁명주의 콜롬비아"
-COL_syndicalist:0 "생디칼리스트 콜롬비아"
+COL_totalist_DEF:0 "혁명 콜롬비아"
+COL_syndicalist:0 "혁명 콜롬비아"
 COL_syndicalist_ADJ:0 "콜롬비아"
-COL_syndicalist_DEF:0 "생디칼리스트 콜롬비아"
+COL_syndicalist_DEF:0 "혁명 콜롬비아"
 COL_radical_socialist:0 "콜롬비아"
 COL_radical_socialist_ADJ:0 "콜롬비아"
 COL_radical_socialist_DEF:0 "콜롬비아"
@@ -4089,9 +4089,9 @@ MAG_national_populist:0 "마다가스카르"
 MAG_national_populist_ADJ:0 "마다가스카르"
 MAG_national_populist_DEF:0 "마다가스카르"
 
-MAL_totalist:0 "마르크스주의 말리"
+MAL_totalist:0 "말리 코뮌"
 MAL_totalist_ADJ:0 "말리"
-MAL_totalist_DEF:0 "마르크스주의 말리"
+MAL_totalist_DEF:0 "말리 코뮌"
 MAL_syndicalist:0 "말리 생디칼리즘 연맹"
 MAL_syndicalist_ADJ:0 "말리"
 MAL_syndicalist_DEF:0 "말리 생디칼리즘 연맹"
@@ -4275,9 +4275,9 @@ MEX_national_populist:0 "멕시코"
 MEX_national_populist_ADJ:0 "멕시코"
 MEX_national_populist_DEF:0 "멕시코"
 
-MLW_totalist:0 "마르크스주의 말라위"
+MLW_totalist:0 "말라위 코뮌"
 MLW_totalist_ADJ:0 "말라위"
-MLW_totalist_DEF:0 "마르크스주의 말라위"
+MLW_totalist_DEF:0 "말라위 코뮌"
 MLW_syndicalist:0 "말라위 생디칼리즘 공화국"
 MLW_syndicalist_ADJ:0 "말라위"
 MLW_syndicalist_DEF:0 "말라위 생디칼리즘 공화국"
@@ -4802,35 +4802,36 @@ NGR_national_populist:0 "나이지리아"
 NGR_national_populist_ADJ:0 "나이지리아"
 NGR_national_populist_DEF:0 "나이지리아"
 
-NIC_market_liberal:0 "Nicaragua"
-NIC_market_liberal_ADJ:0 "Nicaraguan"
-NIC_market_liberal_DEF:0 "Nicaragua"
-NIC_national_populist:0 "Nicaragua"
-NIC_national_populist_ADJ:0 "Nicaraguan"
-NIC_national_populist_DEF:0 "Nicaragua"                                     
-NIC_paternal_autocrat:0 "Nicaragua"
-NIC_paternal_autocrat_ADJ:0 "Nicaraguan"
-NIC_paternal_autocrat_DEF:0 "Nicaragua"
-NIC_radical_socialist:0 "Nicaragua"
-NIC_radical_socialist_ADJ:0 "Nicaraguan"
-NIC_radical_socialist_DEF:0 "Nicaragua"
-NIC_social_conservative:0 "Nicaragua"
-NIC_social_conservative_ADJ:0 "Nicaraguan"
-NIC_social_conservative_DEF:0 "Nicaragua"
-NIC_social_democrat:0 "Nicaragua"
-NIC_social_democrat_ADJ:0 "Nicaraguan"
-NIC_social_democrat_DEF:0 "Nicaragua"
-NIC_social_liberal:0 "Nicaragua"
-NIC_social_liberal_ADJ:0 "Nicaraguan"
-NIC_social_liberal_DEF:0 "Nicaragua"
-NIC_authoritarian_democrat:0 "Nicaragua"
-NIC_authoritarian_democrat_ADJ:0 "Nicaraguan"
-NIC_authoritarian_democrat_DEF:0 "Nicaragua"
-NIC_totalist:0 "Nicaragua"
-NIC_totalist_ADJ:0 "Nicaraguan"
-NIC_totalist_DEF:0 "Nicaragua"
-
-NIC_national_populist_DEF:0 "아메리카 연합주"
+NIC_totalist:0 "니카라과"
+NIC_totalist_ADJ:0 "니카라과"
+NIC_totalist_DEF:0 "니카라과"
+NIC_syndicalist:0 "니카라과"
+NIC_syndicalist_ADJ:0 "니카라과"
+NIC_syndicalist_DEF:0 "니카라과"
+NIC_radical_socialist:0 "니카라과"
+NIC_radical_socialist_ADJ:0 "니카라과"
+NIC_radical_socialist_DEF:0 "니카라과"
+NIC_social_democrat:0 "니카라과"
+NIC_social_democrat_ADJ:0 "니카라과"
+NIC_social_democrat_DEF:0 "니카라과"
+NIC_social_liberal:0 "니카라과"
+NIC_social_liberal_ADJ:0 "니카라과"
+NIC_social_liberal_DEF:0 "니카라과"
+NIC_market_liberal:0 "니카라과"
+NIC_market_liberal_ADJ:0 "니카라과"
+NIC_market_liberal_DEF:0 "니카라과"
+NIC_social_conservative:0 "니카라과"
+NIC_social_conservative_ADJ:0 "니카라과"
+NIC_social_conservative_DEF:0 "니카라과"
+NIC_authoritarian_democrat:0 "니카라과"
+NIC_authoritarian_democrat_ADJ:0 "니카라과"
+NIC_authoritarian_democrat_DEF:0 "니카라과"
+NIC_paternal_autocrat:0 "니카라과"
+NIC_paternal_autocrat_ADJ:0 "니카라과"
+NIC_paternal_autocrat_DEF:0 "니카라과"
+NIC_national_populist:0 "니카라과"
+NIC_national_populist_ADJ:0 "니카라과"
+NIC_national_populist_DEF:0 "니카라과"
 
 NOR_totalist:0 "노르웨이 사회주의 공화국"
 NOR_totalist_ADJ:0 "노르웨이"
@@ -5204,12 +5205,12 @@ PHI_national_populist:0 "필리핀"
 PHI_national_populist_ADJ:0 "필리핀"
 PHI_national_populist_DEF:0 "필리핀"
 
-PIR_totalist:0 "과격주의 피라티니"
+PIR_totalist:0 "리오그란데 코뮌"
 PIR_totalist_ADJ:0 "가우초"
-PIR_totalist_DEF:0 "과격주의 피라티니"
-PIR_syndicalist:0 "히우그란지 생디칼리즘 연합"
+PIR_totalist_DEF:0 "리오그란데 생디칼리즘 연합"
+PIR_syndicalist:0 "리오그란데 생디칼리즘 연합"
 PIR_syndicalist_ADJ:0 "가우초"
-PIR_syndicalist_DEF:0 "히우그란지 생디칼리즘 연합"
+PIR_syndicalist_DEF:0 "리오그란데 생디칼리즘 연합"
 PIR_radical_socialist:0 "히우그란지 코뮌"
 PIR_radical_socialist_ADJ:0 "가우초"
 PIR_radical_socialist_DEF:0 "히우그란지 코뮌"
@@ -5231,9 +5232,9 @@ PIR_authoritarian_democrat_DEF:0 "피라티니"
 PIR_paternal_autocrat:0 "피라티니"
 PIR_paternal_autocrat_ADJ:0 "가우초"
 PIR_paternal_autocrat_DEF:0 "피라티니"
-PIR_national_populist:0 "히우그란지 공화국"
+PIR_national_populist:0 "리오그란데 공화국"
 PIR_national_populist_ADJ:0 "가우초"
-PIR_national_populist_DEF:0 "히우그란지 공화국"
+PIR_national_populist_DEF:0 "리오그란데 공화국"
 
 PLC_totalist:0 "폴란드-리투아니아 코뮌"
 PLC_totalist_ADJ:0 "폴란드-리투아니아"
@@ -7374,15 +7375,15 @@ UZB_national_populist:0 "우즈베키스탄"
 UZB_national_populist_ADJ:0 "우즈벡"
 UZB_national_populist_DEF:0 "우즈베키스탄"
 
-VEN_totalist:0 "베네수엘라"
+VEN_totalist:0 "베네수엘라 사회주의 공화국"
 VEN_totalist_ADJ:0 "베네수엘라"
-VEN_totalist_DEF:0 "베네수엘라"
-VEN_syndicalist:0 "베네수엘라"
+VEN_totalist_DEF:0 "베네수엘라 사회주의 공화국"
+VEN_syndicalist:0 "베네수엘라 사회주의 공화국"
 VEN_syndicalist_ADJ:0 "베네수엘라"
-VEN_syndicalist_DEF:0 "베네수엘라"
-VEN_radical_socialist:0 "베네수엘라"
+VEN_syndicalist_DEF:0 "베네수엘라 사회주의 공화국"
+VEN_radical_socialist:0 "베네수엘라 사회주의 공화국"
 VEN_radical_socialist_ADJ:0 "베네수엘라"
-VEN_radical_socialist_DEF:0 "베네수엘라"
+VEN_radical_socialist_DEF:0 "베네수엘라 사회주의 공화국"
 VEN_social_democrat:0 "베네수엘라"
 VEN_social_democrat_ADJ:0 "베네수엘라"
 VEN_social_democrat_DEF:0 "베네수엘라"
